# gateway

./: .gitignore  Cargo.toml  README.md  gateway.example.json  gateway.json  generate_tls.example.sh  generate_tls.sh
config/: Cargo.toml
config/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: main.rs  requests.rs  service.rs
reverse_proxy/: Cargo.toml
reverse_proxy/src/: main.rs
v0.1/: gateway.example.json  generate_tls.sh
v0.1/config/src/: lib.rs
v0.1/gateway/: Cargo.toml
v0.1/gateway/src/: config.rs  main.rs  requests.rs  responses.rs  service.rs  tls.rs
v0.1/resources/: gateway.json.example  gateway.podmanfile  podman-compose.yml.template
