[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
futures-util = { version = "0.3.1", default-features = false }
hyper = { version = "0.14", features = ["full"] }
rustls = { version = "0.20.1", default-features = false, features = ["tls12"] }
rustls-pemfile = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.23", default-features = false }
tokio-util = "0.7"